Update generated Bach.java and build program